Update file index.html dan style.css

--- a/produk.html
+++ b/produk.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="Produk - Kryon">
 	<meta property="og:description" content="Kryon adalah solusi percetakan terpercaya untuk semua kebutuhan Anda. Melayani cetak undangan, brosur, spanduk, kartu nama, dan merchandise custom dengan kualitas terbaik dan harga bersahabat.">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://[###]">
+	<meta property="og:url" content="https://karyaion.my.id/produk.html">
 	<meta property="og:image" content="https://ik.imagekit.io/mustofa/web/img/logo-kryon-banner.png">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Produk - Kryon">
