--- a/katalog.html
+++ b/katalog.html
@@ -21,10 +21,12 @@
 	<link rel="apple-touch-icon" href="https://ik.imagekit.io/mustofa/web/img/logo-kryon-kotak.png">
 	<meta name="theme-color" content="#ffffff">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  
-  <link rel="icon" href="https://ik.imagekit.io/mustofa/web/img/logo-kryon-kotak.png" type="image/png"> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/main.css">
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+	
+	<script src="js/main.js" defer></script>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <!-- Loading Screen-->
