--- a/produk.html
+++ b/produk.html
@@ -22,6 +22,8 @@
 	<meta name="theme-color" content="#ffffff">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  
+	
+	<script src="js/main.js" defer></script>
 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
