--- a/dev/safe-area.html
+++ b/dev/safe-area.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0) env(safe-area-inset-bottom, 0) env(safe-area-inset-left, 0);
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
       font-family: sans-serif;
       background: #f4f4f4;
     }
